<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="com.tiper.materialspinner.sample.you.tiper.materialspinner.sample.MainActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/b1_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="clear"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/b1_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="error"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/b1_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="click"
                tools:ignore="HardcodedText" />

        </FrameLayout>

        <you.thiago.materialspinner.MaterialSpinner
            android:id="@+id/material_spinner_1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/materialspinner_1"
            app:spinnerMode="bottomsheet" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/b2_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="clear"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/b2_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="error"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/b2_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="click"
                tools:ignore="HardcodedText" />

        </FrameLayout>

        <you.thiago.materialspinner.MaterialSpinner
            android:id="@+id/material_spinner_2"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:hint="@string/materialspinner_2"
            android:prompt="@string/app_name"
            android:src="@drawable/ic_selector_drawable"
            android:textColor="#0ff"
            tools:text="lalala" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/b3_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="clear" />

            <Button
                android:id="@+id/b3_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="error" />

            <Button
                android:id="@+id/b3_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="click" />

        </FrameLayout>

        <you.thiago.materialspinner.MaterialSpinner
            android:id="@+id/material_spinner_3"
            style="@style/AppTheme.Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/materialspinner_3"
            android:prompt="@string/materialspinner"
            app:spinnerMode="dialog"
            app:srcCompat="@drawable/ic_selector_drawable" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:prompt="@string/app_name"
            android:spinnerMode="dialog" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/appCompatSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:prompt="@string/app_name"
            android:spinnerMode="dropdown"
            app:spinnerMode="bottomsheet" />

    </LinearLayout>

</ScrollView>
